// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipes should display message if there are no recipes 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    Sorry, we currently have no recipes for you
</div>,
  "nodes": Array [
    <div>
      Sorry, we currently have no recipes for you
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Recipes
        favourites={Array []}
        recipes={Array []}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Recipes {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "favourites": Array [],
          "recipes": Array [],
        },
        "refs": Object {},
        "searchRecipes": [Function],
        "state": Object {
          "recipeResults": null,
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          Sorry, we currently have no recipes for you
</div>,
        "_debugID": 4,
        "_renderedOutput": <div>
          Sorry, we currently have no recipes for you
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Recipes
    favourites={Array []}
    recipes={Array []}
/>,
}
`;

exports[`Recipes should render RecipeSearch and List 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="recipesContainer"
>
    <RecipeSearch
        searchRecipes={[Function]}
    />
    <List
        recipes={
            Array [
                Object {
                  "id": "1",
                  "name": "steak",
                },
                Object {
                  "id": "2",
                  "name": "chicken",
                },
              ]
        }
    />
</div>,
  "nodes": Array [
    <div
      className="recipesContainer"
>
      <RecipeSearch
            searchRecipes={[Function]}
      />
      <List
            recipes={
                  Array [
                        Object {
                          "id": "1",
                          "name": "steak",
                        },
                        Object {
                          "id": "2",
                          "name": "chicken",
                        },
                      ]
            }
      />
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Recipes
        recipes={
                Array [
                        Object {
                          "id": "1",
                          "name": "steak",
                        },
                        Object {
                          "id": "2",
                          "name": "chicken",
                        },
                      ]
        }
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Recipes {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "recipes": Array [
            Object {
              "id": "1",
              "name": "steak",
            },
            Object {
              "id": "2",
              "name": "chicken",
            },
          ],
        },
        "refs": Object {},
        "searchRecipes": [Function],
        "state": Object {
          "recipeResults": null,
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="recipesContainer"
>
          <RecipeSearch
                    searchRecipes={[Function]}
          />
          <List
                    recipes={
                              Array [
                                        Object {
                                          "id": "1",
                                          "name": "steak",
                                        },
                                        Object {
                                          "id": "2",
                                          "name": "chicken",
                                        },
                                      ]
                    }
          />
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="recipesContainer"
>
          <RecipeSearch
                    searchRecipes={[Function]}
          />
          <List
                    recipes={
                              Array [
                                        Object {
                                          "id": "1",
                                          "name": "steak",
                                        },
                                        Object {
                                          "id": "2",
                                          "name": "chicken",
                                        },
                                      ]
                    }
          />
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Recipes
    recipes={
        Array [
            Object {
              "id": "1",
              "name": "steak",
            },
            Object {
              "id": "2",
              "name": "chicken",
            },
          ]
    }
/>,
}
`;
